--- a/style.css
+++ b/style.css
@@ -22,9 +22,20 @@ img{
 body{
     color: rgb(41, 39, 39);
     font-family: sans-serif;
-    background-color: #e5f0ed;
-    margin: 0
+    background-color: #e7f2ff;
+    margin: 0;
 }
+
+.work-item img{
+    width: 100%;
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+
+.work-item img:hover{
+    transform: scale(1.05);
+}
+
 
 .container{
     width: 80%;
@@ -32,23 +43,17 @@ body{
 }
 
 .photo img{
-    max-width: 100%;
-    height: auto;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
-.photo img:hover{
-    filter: grayscale(100%);
-    max-width: 100px;
-}
 
 .photo{
-    position: relative;
-    text-align: center;
-    background-color: #d6ddfa;
-    width: 100px;
-    margin: 0 auto 50px;
-    overflow:hidden ;
-    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 40px;
 }
 
 .name{
@@ -59,12 +64,23 @@ body{
     position: fixed;
     right: 30px;
     bottom: 30px;
-    width: 100px;
-    height: 100px;
-    background-color: #ffdada;
+
+    width: 60px;
+    height: 60px;
+    background-color: #3d3a3a;
     border-radius: 50%;
-    text-align: center;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.top a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 14px;
+}
+
 
 .work-item{
     flex-shrink: 0;
@@ -87,4 +103,36 @@ body{
     display:flex;
     flex-wrap: wrap;
     margin-top: 50px;
+}
+
+.work-item{
+    position: relative;
+    overflow: hidden;
+}
+
+.work-item img{
+    width: 100%;
+    display: block;
+    transition: transform 0.3s;
+}
+
+.work-item .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.work-item:hover .overlay{
+    opacity: 1;
+}
+
+.work-item:hover img{
+    transform: scale(1.05);
 }
